# fortuna-internal-sdk

./: .gitignore  INTERNAL_API_SETUP.md  MANIFEST.in  README.md  build.sh  example.py  pyproject.toml  requirements-dev.txt  setup.py
fortuna_archetype_client/: __init__.py  client.py  exceptions.py
